<resources>
    <string name="app_name">Watch_Weather</string>
    <string name="action_settings">Settings</string>
    <string name="textTemper">Temperature:</string>
    <string name="textWeather">Weather:</string>
    <string name="textPressure">Pressure:</string>
    <string name="textHumidity">Humidity:</string>
    <string name="city_meny">Please, enter the place</string>
    <string name="menu_open_menu">...</string>
    <string name="ww">W_W</string>
    <string name="android_studio">Android Studio</string>
    <string name="android_studio_android_com">android.studio@android.com</string>
    <string name="todo">TODO</string>
    <string name="settings_menu_text">Settings</string>
    <string name="source_menu_text">Sources of data</string>
    <string name="send_menu_text">Send</string>
    <string name="infocontacts_menu">Information and Contacts</string>
    <string name="info_menu_text">Info</string>
    <string name="authors_menu_text">Authors</string>
    <string name="contacts_menu_text">Contacts</string>
    <string name="open_weather_maps_app_id">d56bc5da78d9a274526cae573e2b3e3b</string>
    <string name="place_not_found">City is not found</string>
    <string name="textTemperTest">+1</string>
    <string name="textUM">Units of measurements</string>
    <string name="textPS">Priority source:</string>
    <string name="textSources">Sources:</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="navigation_drawer_open">Navigation drawer open</string>
    <string name="navigation_drawer_clouse">Navigation drawer clouse</string>
    <string name="default_gradus">F</string>
    <string name="default_pressure">hPa</string>
</resources>
